Fixed alignment issues

--- a/css/mapping.css
+++ b/css/mapping.css
@@ -5,7 +5,7 @@
 }
 #map_area
 {
-	padding: 10px;
+	padding: 3px;
 }
 
 #map_wrapper {
